Alterado titulo do grafico para portugues

--- a/exemplo.html
+++ b/exemplo.html
@@ -8,7 +8,7 @@
       function drawChart() {
 
         var data = google.visualization.arrayToDataTable([
-          ['Task', 'Hours per Day'],
+          ['Tarefas', 'Horas por Dia'],
           ['Work',     11],
           ['Eat',      2],
           ['Commute',  2],
