--- a/exemplo.html
+++ b/exemplo.html
@@ -9,11 +9,10 @@
 
         var data = google.visualization.arrayToDataTable([
           ['Tarefas', 'Horas por Dia'],
-          ['Work',     11],
-          ['Eat',      2],
-          ['Commute',  2],
-          ['Watch TV', 2],
-          ['Sleep',    7]
+          ['Trabalho',     11],
+          ['Almoço',      2],
+          ['Assistir TV', 2],
+          ['Dormir',    7]
         ]);
 
         var options = {
