Inclusao tarefa estudar

--- a/exemplo.html
+++ b/exemplo.html
@@ -9,9 +9,10 @@
 
         var data = google.visualization.arrayToDataTable([
           ['Tarefas', 'Horas por Dia'],
-          ['Trabalho',     11],
+          ['Trabalho',     10],
           ['Almoço',      2],
           ['Assistir TV', 2],
+          ['Estudar', 3],
           ['Dormir',    7]
         ]);
 
